css: Fix contrast for status icons
Copied from g-s

--- a/data/style.css
+++ b/data/style.css
@@ -65,26 +65,30 @@ spinner.row-icon {
 /* PikaStatusIcon */
 
 .status-icon {
-  padding: 7px;
+  min-width: 32px;
+  min-height: 32px;
   border-radius: 9999px;
-  background-color: alpha(currentColor, .1);
 }
 
 .ok-icon {
-  color: @success_bg_color;
+  color: @green_5;
+  background-color: alpha(@green_3, .25);
 }
 
 .warning-icon {
-  color: @warning_bg_color;
+  color: #ae7b03;
+  background: alpha(@yellow_5, .25);
 }
 
 .error-icon {
-  color: @error_bg_color;
+  color: @red_4;
+  background-color: alpha(@red_2, .25);
 }
 
 .accent-icon {
   padding: 9px;
-  color: @accent_color;
+  color: @blue_4;
+  background-color: alpha(@blue_3, .25);
 }
 
 .error {
@@ -113,7 +117,6 @@ popover calendar label {
   min-height: 1.5em;
   margin: 1px;
 }
-
 
 .info-card {
   padding: 15px 18px;
